MJ 29/03/2007
- Set len=0 in IdleProtocol.onKill (credit goes to Samuel Bernard)
- Fixed GeneralNode.setFailState to always throw an exception after
  the node is DEAD (not only when OK is attempted to set)
  (credit goes to Samuel Bernard)

AM 24/02/2007
- Modified peersim.config.Operators to fix a bug in the comparison
  between two values.

AM 17/02/2007
- Modified VectorObserver to enable the specification of a generic
  condition (not only aggregate == value, but any kind of complex
  condition). This break the compatibility with the previous version
  in the cvs, but not with the previous released version.
- Improved the RangeSimulator to better manage the shutdown of 
  subprocesses that are spawn by the RangeSimulator. This has
  required the change of the methods from static to normal ones.

MJ 05/01/2007
- Fixed a bug in examples.loadbalance.LBObserver

MJ 01/12/2006
- Restored ExtendedRandom to its state in release 1.0.1 and modified
  CommonState to respect that interface

AM 22/11/2006
- Added the possibility of customizing the Random generator through
  a new configuration parameter (random). The specified generator
  must extend ExtendedRandom.

AM 19/11/2006
- Modified CDSimulator, EDSimulator, in order to get rid of 
  the "fake" parameters. Now CheckConfig stops simulations
  by simple setting simulation.cycle or simulation.endtime to 0.
- Added a new transport class for trace initialization. Unlike
  KingParser, this class reads a more compact, binary format
  (described in the file); this implies a large gain with
  respect to efficiency (less than a second w.r.t. to several 
  seconds). 

MJ 18/11/2006
- Added the possibility to shuffle iteration order without actually
  shuffling the nodes in the network. This however needs more memory.
  It can be accessed by a new parameter "shuffle" to controls
  FullNextCycle and NextCycle, which is not defined by default.
- Added a new example on using the event based engine, and also added